k8s/mo2notificationlog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)

  labels:
    io.kompose.service: mo2notificationlog
  name: mo2notificationlog
  namespace: mo2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mo2notificationlog
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)

      labels:
        io.kompose.service: mo2notificationlog
    spec:
      containers:
        - env:
            - name: LOG_COL
              value: notificationLog
            - name: LOG_PORT
              value: "9990"
            - name: MO2_DATABASE
              value: mo2
            - name: MO2_MONGO_URL
              valueFrom:
                configMapKeyRef:
                  key: MONGODB_URL
                  name: var-env
          image: registry.cn-hangzhou.aliyuncs.com/mo2/mo2log:latest
          name: mo2notificationlog
          ports:
            - containerPort: 9990
          resources:
            limits:
              cpu: 30m
              memory: 50Mi
            requests: 
              cpu: 30m
              memory: 30Mi
      restartPolicy: Always
status: {}
