k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)

  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)

      labels:
        io.kompose.service: nginx
    spec:
      priorityClassName: high-priority
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
#      nodeName: izwz9iyowiok93f5x0h8faz
      containers:
        - env:
            - name: LETSENCRYPT
              value: "true"
            - name: LE_EMAIL
              value: chronos@motwo.cn
            - name: LE_FQDN
              value: www.motwo.cn
            - name: TZ
              value: Asia/Shanghai
          image: registry.cn-hangzhou.aliyuncs.com/mo2/nginx-le:latest
          name: nginx
          ports:
            - name: "p80"
              containerPort: 80
            - name: "p443"
              containerPort: 443
          resources:
            limits:
              cpu: 500m
              memory: 50Mi
            requests: 
              cpu: 30m
              memory: 30Mi
          volumeMounts:
            - mountPath: /etc/nginx/ssl
              name: nginx-claim0
            - mountPath: /etc/nginx/conf.d
              name: nginx-claim1
      hostname: nginx
      restartPolicy: Always
      volumes:
        - name: nginx-claim0
          persistentVolumeClaim:
            claimName: nginx-claim0
        - name: nginx-claim1
          persistentVolumeClaim:
            claimName: nginx-claim1
status: {}
