k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)

  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)

      labels:
        io.kompose.service: redis
    spec:
      priorityClassName: high-priority
      containers:
        - env:
            - name: ALLOW_EMPTY_PASSWORD
              value: "yes"
            - name: REDIS_DISABLE_COMMANDS
              value: FLUSHDB,FLUSHALL
          image: redis
          name: redis
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 60m
              memory: 50Mi
            requests: 
              cpu: 30m
              memory: 30Mi
      restartPolicy: Always
status: {}
