k8s/mo2front.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mo2front
  name: mo2front
spec:
  ports:
    - name: "8110"
      port: 8110
      targetPort: 8110
  selector:
    app: mo2front
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mo2front
  name: mo2front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mo2front
  strategy:
    type: RollingUpdate
  template:
    metadata:

      labels:
        app: mo2front
    spec:
      priorityClassName: high-priority
      containers:
      - image: registry.cn-hangzhou.aliyuncs.com/mo2/mo2-front:latest
        name: mo2front
        ports:
          - containerPort: 8110
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests: 
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
status: {}
