k8s/mo2notificationlog-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mo2notificationlog
  name: mo2notificationlog
spec:
  ports:
    - name: "9990"
      port: 9990
      targetPort: 9990
  selector:
    io.kompose.service: mo2notificationlog
status:
  loadBalancer: {}
