k8s/mo2search-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)

  labels:
    io.kompose.service: mo2search
  name: mo2search
spec:
  ports:
    - name: "5097"
      port: 5097
      targetPort: 5097
  selector:
    io.kompose.service: mo2search
status:
  loadBalancer: {}
